package com.delbono.marco.awesomepizza.enums;

public enum OrderStatus {
    PLACED, ACCEPTED, REJECTED, WORK_IN_PROGRESS, READY_TO_DELIVER, DELIVERED;
}
