package com.delbono.marco.awesomepizza.enums;

public enum PizzaSize {
    BABY, NORMAL
}
